remove some padding, try eliminate horizontal scroll bug on mobile

--- a/frontend/src/components/modals/SettingsModal.css
+++ b/frontend/src/components/modals/SettingsModal.css
@@ -41,7 +41,6 @@
 /* header */
 .settings-header {
   padding: 1.5rem;
-  border-bottom: 1px solid #e5e7eb;
 }
 
 .settings-header h2 {
